# tgfx-benchmark

./: .gitignore  CMakeLists.txt  DEPS  README.md  codeformat.sh  gen_mac  install_emsdk.js  sync_deps.sh
include/base/: AppHost.h  Drawer.h
mac/: gen_mac
mac/BenchViewer/: AppDelegate.h  AppDelegate.m  TGFXView.h  TGFXView.mm  ViewController.h  ViewController.mm  WindowController.h  WindowController.mm  main.m
mac/BenchViewer.xcodeproj/: project.pbxproj
mac/BenchViewer/Base.lproj/: Main.storyboard
src/: ConicGradient.cpp
src/base/: AppHost.cpp  AppHost.h  Bench.cpp  Bench.h  Drawer.cpp  Drawers.h
src/benchmark/: ParticleBench.cpp  ParticleBench.h  SolidRectBench.cpp  SolidRectBench.h
src/platform/mac/: AppDelegate.h  AppDelegate.mm  TGFXView.h  TGFXView.mm  TGFXWindow.h  TGFXWindow.mm  WindowDelegate.h  WindowDelegate.mm  main.mm
src/platform/win/: TGFXWindow.cpp  TGFXWindow.h  main.cpp
web/: .gitignore  build_web.sh  package.json  server.js
web/demo/: CMakeLists.txt  benchmark.hash  common.ts  index-mt.html  index-mt.ts  index-st.html  index-st.ts  index.css  index.html  index.ts
web/demo/src/: TGFXBaseView.cpp  TGFXBaseView.h  TGFXThreadsView.cpp  TGFXThreadsView.h  TGFXView.cpp  TGFXView.h  binding.cpp
web/demo/static/: sideBarConfigParam.json
web/demo/static/css/: browser-alert.css  index.css  progress-bar.css
web/demo/static/js/: eventHandling.js
web/demo/static/js/locale/: en_US.js  zh_CN.js
web/script/: build.web.js  cmake.demo.js  rollup.demo.js  rollup.dev.js  rollup.tgfx.js  setup.emsdk.js
web/src/: binding.ts  constant.ts  tgfx-module.ts  tgfx.ts  types.ts
web/src/core/: bitmap-image.ts  matrix.ts  scaler-context.ts  web-mask.ts
web/src/utils/: canvas.ts  decorators.ts  font-family.ts  measure-text.ts  type-utils.ts  ua.ts
website/: .gitignore  package.json  server.js
website/demo/: common.ts  index.html  index.ts  mouseEvent.ts
website/demo/static/: sideBarConfigParam.json
website/demo/static/css/: index.css  progress-bar.css
website/demo/static/js/: eventHandling.js
website/demo/static/js/locale/: en_US.js  zh_CN.js
website/script/: rollup.demo.js  rollup.tgfx.js
